# qz

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/: basic_auth.rs  cors.rs  counter.rs  form.rs  hello.rs  redirect.rs  static_dir.rs  static_file.rs  teapot.rs
examples/assets/: form.html  index.html  test.html
examples/chat/: Cargo.toml
examples/chat/asset/: register.html  timeline.html  timeline.js
examples/chat/frontend/: package-lock.json  package.json  webpack.config.js
examples/chat/frontend/src/: App.css  App.js  App.tsx  CreatePost.js  Post.js  Posts.js
examples/chat/frontend/template/: index.html
examples/chat/src/: db.rs  main.rs  model.rs
include/: broadcast.h  error.h  method.h  parse.h  parse_request.h  request.h  tcp.h  util.h
lib/: broadcast.c  error.c  parse.c  parse_request.c  request.c  tcp.c  util.c
src/: body.rs  client.c  handler.rs  header.rs  lib.rs  main.c  method.rs  middleware.rs  mime.rs  parser.rs  qz.c  qz.h  redirect.rs  request.rs  responder.rs  response.rs  router.rs  serve.c  server.rs  static_dir.rs  static_file.rs  static_files.rs  status.rs  tcp.c
src/middleware/: basic_auth.rs  cors.rs
src/static_files/: static_dir.rs  static_file.rs
test/: parse.cpp  parse_request.cpp  util.cpp
tests/: static_files.rs
