[package]
name = "qz"
version = "0.1.0"
authors = ["ikanago <ikanago@ikanago.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1.5", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync", "fs"] }
radix_trie = "0.2"

[dev-dependencies]
rand = "0.8"
